Bug 1593112 - Updated buffer grammar to match samples storage - r=gregtatum

Differential Revision: https://phabricator.services.mozilla.com/D51553

--HG--
extra : moz-landing-system : lando